--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -2,7 +2,7 @@ DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
 DISTRO_VERSION_BASE = "4.0.4"
 DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
-DISTRO_CODENAME = "master"
+DISTRO_CODENAME = "kirkstone-l4t-r32.7"
 SDK_VENDOR = "-tdsdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
