repos: switch mender back to upstream; update mender-community, poky
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,8 +12,8 @@
 	branch = kirkstone
 [submodule "repos/meta-mender"]
 	path = repos/meta-mender
-	url = https://github.com/madisongh/meta-mender.git
-	branch = dunfell-kirkstone-compat
+	url = https://github.com/mendersoftware/meta-mender.git
+	branch = kirkstone
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
 	url = https://github.com/mendersoftware/meta-mender-community.git
