distro/tegrademo.conf: update to align with poky latest
and drop the obsolete virtual/bootlogo provider setting.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -1,10 +1,11 @@
 DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
 DISTRO_VERSION_BASE = "4.0.4"
-DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
+DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${METADATA_REVISION}"
 DISTRO_CODENAME = "kirkstone-l4t-r32.7"
 SDK_VENDOR = "-tdsdk"
-SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
+SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${METADATA_REVISION}','snapshot')}"
+SDK_VERSION[vardepvalue] = "${SDK_VERSION}"
 
 MAINTAINER = "OE4Tegra team <oe4tegra@madison.systems>"
 
@@ -17,9 +18,6 @@ TARGET_VENDOR = "-oe4t"
 REQUIRED_TD_BBLAYERS_CONF_VERSION = "${DISTRO}-4"
 
 LOCALCONF_VERSION = "2"
-
-DISTRO_VERSION[vardepsexclude] = "DATE"
-SDK_VERSION[vardepsexclude] = "DATE"
 
 TD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland vulkan systemd pam virtualization"
 
@@ -36,24 +34,15 @@ PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
 require conf/include/gstreamer-1.14.conf
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}"
 
 TCLIBCAPPEND = ""
 
-PREMIRRORS ??= "\
-bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \
-hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
-osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
-svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/"
+PACKAGE_CLASSES ?= "package_rpm"
 
 SANITY_TESTED_DISTROS ?= " \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
-            ubuntu-21.10 \n \
             ubuntu-22.04 \n \
             "
 
@@ -75,5 +64,3 @@ BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_ACCEPTED += "commercial_faad2"
-
-PREFERRED_PROVIDER_virtual/bootlogo:tegra = "bootlogo-custom"
