--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -1,10 +1,11 @@
 DISTRO = "tegrademo"
 DISTRO_NAME = "OE4Tegra Demonstration Distro"
 DISTRO_VERSION_BASE = "4.1"
-DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${DATE}"
+DISTRO_VERSION = "${DISTRO_VERSION_BASE}+snapshot-${METADATA_REVISION}"
 DISTRO_CODENAME = "langdale"
 SDK_VENDOR = "-tdsdk"
-SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
+SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${METADATA_REVISION}','snapshot')}"
+SDK_VERSION[vardepvalue] = "${SDK_VERSION}"
 
 MAINTAINER = "OE4Tegra team <oe4tegra@madison.systems>"
 
@@ -18,39 +19,25 @@ REQUIRED_TD_BBLAYERS_CONF_VERSION = "${DISTRO}-5"
 
 LOCALCONF_VERSION = "2"
 
-DISTRO_VERSION[vardepsexclude] = "DATE"
-SDK_VERSION[vardepsexclude] = "DATE"
-
 TD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland vulkan systemd pam virtualization"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${TD_DEFAULT_DISTRO_FEATURES}"
 
 # Jetson platforms do not use linux-yocto, but for QEMU testing
 # align with the poky distro.
-PREFERRED_VERSION_linux-yocto ?= "5.15%"
-PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
+PREFERRED_VERSION_linux-yocto ?= "5.19%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.19%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}"
 
 TCLIBCAPPEND = ""
 
 PACKAGE_CLASSES ?= "package_rpm"
 
-PREMIRRORS ??= "\
-bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \
-hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
-osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \
-p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \
-svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/"
-
 SANITY_TESTED_DISTROS ?= " \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
-            ubuntu-21.10 \n \
             ubuntu-22.04 \n \
             "
 
@@ -72,5 +59,3 @@ BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_ACCEPTED += "commercial_faad2"
-
-PREFERRED_PROVIDER_virtual/bootlogo:tegra = "bootlogo-custom"
