meta-demo-ci: use addpylib directive in layer.conf
to pull in oeaws.botos3fetcher, since the old OE_IMPORTS
method of pulling in python libraries has been disabled.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-demo-ci/conf/layer.conf
+++ b/layers/meta-demo-ci/conf/layer.conf
@@ -9,3 +9,5 @@ BBFILE_PRIORITY_tegrademo-ci = "40"
 LAYERVERSION_tegrademo-ci = "1"
 LAYERDEPENDS_tegrademo-ci = "core"
 LAYERSERIES_COMPAT_tegrademo-ci = "langdale mickledore"
+
+addpylib ${LAYERDIR}/lib oeaws.botos3fetcher
