distro/tegrademo-mender.conf: update INITRAMFS_FSTYPES workaround
for the initrd-flash initramfs image to use the new variable
that has the correct value.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo-mender.conf
@@ -20,7 +20,7 @@ MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
 
 IMAGE_FSTYPES:tegra = "tegraflash mender dataimg"
 IMAGE_FSTYPES:pn-tegra-minimal-initramfs:tegra = "${INITRAMFS_FSTYPES}"
-IMAGE_FSTYPES:pn-tegra-initrd-flash-initramfs:tegra = "${INITRAMFS_FSTYPES}"
+IMAGE_FSTYPES:pn-tegra-initrd-flash-initramfs:tegra = "${TEGRA_INITRD_FLASH_INITRAMFS_FSTYPES}"
 IMAGE_FEATURES:append = " read-only-rootfs"
 IMGCLASSES:append = " rootfs-postcommands-overrides"
 
