--- a/layers/meta-tegrademo/conf/layer.conf
+++ b/layers/meta-tegrademo/conf/layer.conf
@@ -6,7 +6,7 @@ BBFILE_PATTERN_tegrademo = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tegrademo = "50"
 
 LAYERVERSION_tegrademo = "4"
-LAYERSERIES_COMPAT_tegrademo = "langdale mickledore"
+LAYERSERIES_COMPAT_tegrademo = "mickledore"
 
 # This is used by the tegra-distro-sanity bbclass
 # to identify the distro layer directory during
