distro/tegrademo.conf: add x264 to LICENSE_FLAGS_ACCEPTED
as we'll need a software-based video encoder on Orin Nano
systems.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -58,4 +58,4 @@ INHERIT += "uninative"
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
-LICENSE_FLAGS_ACCEPTED += "commercial_faad2"
+LICENSE_FLAGS_ACCEPTED += "commercial_faad2 commercial_x264"
