distro/tegrademo.conf: set OLDEST_KERNEL to 5.10
OE-Core has bumped this setting to 5.15 by default, so
we need to set it ourselves for compatibility with the
older NVIDIA kernel.

Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -59,3 +59,5 @@ BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_ACCEPTED += "commercial_faad2 commercial_x264"
+
+OLDEST_KERNEL:aarch64 = "5.10"
