--- a/layers/meta-tegrademo/conf/distro/tegrademo.conf
+++ b/layers/meta-tegrademo/conf/distro/tegrademo.conf
@@ -59,3 +59,35 @@ BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
 LICENSE_FLAGS_ACCEPTED += "commercial_faad2"
+
+
+#mender
+INHERIT += "mender-full"
+INHERIT:append:tegra = " tegra-mender-setup"
+IMAGE_FSTYPES:tegra = "tegraflash mender dataimg"
+# IMAGE_FSTYPES:pn-demo-image-base:tegra = "tegraflash"
+IMAGE_FSTYPES:pn-tegra-minimal-initramfs:tegra = "${INITRAMFS_FSTYPES}"
+IMAGE_FSTYPES:pn-tegra-initrd-flash-initramfs:tegra = "${TEGRA_INITRD_FLASH_INITRAMFS_FSTYPES}"
+
+MENDER_EFI_LOADER = ""
+
+MENDER_FEATURES_DISABLE:append = " mender-uboot"
+#MENDER_FEATURES_DISABLE:append = " mender-persist-systemd-machine-id"
+# MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_${BUILDNAME}"
+MENDER_ARTIFACT_NAME ?= "${IMAGE_BASENAME}_fixme"
+
+IMAGE_FEATURES:append = " read-only-rootfs"
+
+
+MENDER_INVENTORY_POLL_INTERVAL_SECONDS = "15"
+MENDER_RETRY_POLL_INTERVAL_SECONDS = "20"
+MENDER_UPDATE_POLL_INTERVAL_SECONDS = "15"
+MENDER_SERVER_URL = "https://hosted.mender.io"
+MENDER_DEVICE_TYPE:jetson-agx-orin-devkit = "jetson-agx-orin-devkit"
+MENDER_ARTIFACT_SIGNING_KEY = "/data/codilime/mender/private.key"
+MENDER_ARTIFACT_VERIFY_KEY = "/data/codilime/mender/public.key"
+
+INHERIT += "rm_work"
+
+#EDK2_BUILD_MODE:pn-edk2-firmware-tegra = "DEBUG"
+
