--- a/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo/bblayers.conf.sample
@@ -18,4 +18,6 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-tegra-support \
   ##OEROOT##/meta-demo-ci \
   ##OEROOT##/meta-tegrademo \
+  ##OEROOT##/meta-mender-core \
+  ##OEROOT##/meta-mender-tegra \  
   "
