feat: prepare meta-mender-community refactoring
This reflects 1862576ba943409857986072e19695b73d82ba7a on
https://github.com/theyoctojester/meta-mender-community to
prepare for the Jetpack4 and Jetpack5 support in
meta-mender-community.

Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,8 +16,8 @@
 	branch = kirkstone
 [submodule "repos/meta-mender-community"]
 	path = repos/meta-mender-community
-	url = https://github.com/mendersoftware/meta-mender-community.git
-	branch = kirkstone
+	url = https://github.com/theyoctojester/meta-mender-community.git
+	branch = oe4t-kirkstone-refactor
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
