meta: update LAYERSERIES_COMPAT to nanbield for all layers
Signed-off-by: Matt Madison <matt@madison.systems>

--- a/layers/meta-demo-ci/conf/layer.conf
+++ b/layers/meta-demo-ci/conf/layer.conf
@@ -8,6 +8,6 @@ BBFILE_PRIORITY_tegrademo-ci = "40"
 
 LAYERVERSION_tegrademo-ci = "1"
 LAYERDEPENDS_tegrademo-ci = "core"
-LAYERSERIES_COMPAT_tegrademo-ci = "mickledore"
+LAYERSERIES_COMPAT_tegrademo-ci = "nanbield"
 
 addpylib ${LAYERDIR}/lib oeaws.botos3fetcher
