--- a/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
+++ b/layers/meta-tegrademo/conf/template-tegrademo-mender/bblayers.conf.sample
@@ -1,7 +1,7 @@
 # Version of layers configuration, specific to
 # each defined distro in the repository.
 # Format: ${DISTRO}-<version>
-TD_BBLAYERS_CONF_VERSION = "tegrademo-mender-7"
+TD_BBLAYERS_CONF_VERSION = "tegrademo-mender-8"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -17,7 +17,7 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-virtualization \
   ##OEROOT##/meta-tegra-community \
   ##OEROOT##/meta-mender-core \
-  ##OEROOT##/meta-mender-tegra \
+  ##OEROOT##/meta-mender-tegra-jetpack4 \
   ##OEROOT##/meta-tegra-support \
   ##OEROOT##/meta-demo-ci \
   ##OEROOT##/meta-tegrademo \
