layers: fix LAYERSERIES_COMPAT to styhead

--- a/layers/meta-tegrademo/conf/layer.conf
+++ b/layers/meta-tegrademo/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILE_PATTERN_tegrademo = "^${LAYERDIR}/"
 BBFILE_PRIORITY_tegrademo = "50"
 
 LAYERVERSION_tegrademo = "4"
-LAYERSERIES_COMPAT_tegrademo = "styhead walnascar"
+LAYERSERIES_COMPAT_tegrademo = "styhead"
 
 # This is used by the tegra-distro-sanity bbclass
 # to identify the distro layer directory during
