--- a/layers/meta-tegrademo/conf/templates/tegrademo/local.conf.sample
+++ b/layers/meta-tegrademo/conf/templates/tegrademo/local.conf.sample
@@ -10,9 +10,7 @@
 # The following machines are avilable in the meta-tegra layer:
 #
 #MACHINE ?= "jetson-agx-orin-devkit"
-#MACHINE ?= "jetson-agx-xavier-devkit"
-#MACHINE ?= "jetson-xavier-nx-devkit"
-#MACHINE ?= "jetson-xavier-nx-devkit-emmc"
+#MACHINE ?= "jetson-orin-nano-devkit"
 #@TD_SETUP_MACHINE@ - placeholder for automatic insertion by setup-env
 #
 # This sets the default machine to be qemux86-64 if no other machine is selected:
@@ -94,27 +92,29 @@ SDKMACHINE ?= "x86_64"
 # Extra image configuration defaults
 #
 # The EXTRA_IMAGE_FEATURES variable allows extra packages to be added to the generated
-# images. Some of these options are added to certain image types automatically. The
-# variable can contain the following options:
-#  "dbg-pkgs"       - add -dbg packages for all installed packages
-#                     (adds symbol information for debugging/profiling)
-#  "src-pkgs"       - add -src packages for all installed packages
-#                     (adds source code for debugging)
-#  "dev-pkgs"       - add -dev packages for all installed packages
-#                     (useful if you want to develop against libs in the image)
-#  "ptest-pkgs"     - add -ptest packages for all ptest-enabled packages
-#                     (useful if you want to run the package test suites)
-#  "tools-sdk"      - add development tools (gcc, make, pkgconfig etc.)
-#  "tools-debug"    - add debugging tools (gdb, strace)
-#  "eclipse-debug"  - add Eclipse remote debugging support
-#  "tools-profile"  - add profiling tools (oprofile, lttng, valgrind)
-#  "tools-testapps" - add useful testing tools (ts_print, aplay, arecord etc.)
-#  "debug-tweaks"   - make an image suitable for development
-#                     e.g. ssh root access has a blank password
-# There are other application targets that can be used here too, see
-# meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
-# We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
+# images. Some of these options are added to certain image types automatically. Some
+# of the features available are:
+#  "dbg-pkgs"             - add -dbg packages for all installed packages
+#                           (adds symbol information for debugging/profiling)
+#  "src-pkgs"             - add -src packages for all installed packages
+#                           (adds source code for debugging)
+#  "dev-pkgs"             - add -dev packages for all installed packages
+#                           (useful if you want to develop against libs in the image)
+#  "ptest-pkgs"           - add -ptest packages for all ptest-enabled packages
+#                           (useful if you want to run the package test suites)
+#  "tools-sdk"            - add development tools (gcc, make, pkgconfig etc.)
+#  "tools-debug"          - add debugging tools (gdb, strace)
+#  "eclipse-debug"        - add Eclipse remote debugging support
+#  "tools-profile"        - add profiling tools (oprofile, lttng, valgrind)
+#  "tools-testapps"       - add useful testing tools (ts_print, aplay, arecord etc.)
+#  "allow-empty-password" - allow users to have an empty password
+#  "empty-root-password"  - the root user has no password set
+#  "allow-root-login      - the root user can login
+# There are other features that can be used here too, see
+# meta/classes-recipe/image.bbclass and
+# meta/classes-recipe/core-image.bbclass for more details.
+# We default to allowing root login without a password for convenience.
+EXTRA_IMAGE_FEATURES ?= "allow-empty-password empty-root-password allow-root-login"
 
 #
 # Additional image features
@@ -202,8 +202,10 @@ BB_DISKMON_DIRS ??= "\
 # present in the cache. It assumes you can download something faster than you can build it
 # which will depend on your network.
 # Note: For this to work you also need hash-equivalence passthrough to the matching server
+# Also note that for the tegrademo distro, sstate maintained by the Yocto Project sstate
+# is probably not very helpful.
 #
-#BB_HASHSERVE_UPSTREAM = "hashserv.yocto.io:8687"
+#BB_HASHSERVE_UPSTREAM = 'wss://hashserv.yoctoproject.org/ws'
 #SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/all/PATH;downloadfilename=PATH"
 
 #
