swupdate: install-if-different bootloader support
* add tegra_swupdate.bbclass for shared vars between
swupdate components.  Add demo layer conf to support
classes in meta-swupdate dynamic layer.
* Add TEGRA_SWUPDATE_BOOTLOADER_INSTALL_ONLY_IF_DIFFERENT
variable to control whether the `install-if-different`
feature is used for the capsule image.
* Add a dedicated recipe for the tegra-swupdate-script
and add support for detecting whether the capsule was
installed.  If not installed, do a slot switch instead
of requesting a capsule update on the next boot.

Signed-off-by: Dan Walkes <danwalkes@trellis-logic.com>

--- a/layers/meta-tegrademo/dynamic-layers/meta-swupdate/recipes-support/swupdate/swupdate-machine-config/swupdate-genconfig.sh.in
+++ b/layers/meta-tegrademo/dynamic-layers/meta-swupdate/recipes-support/swupdate/swupdate-machine-config/swupdate-genconfig.sh.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-
+datadir=@DATADIR@
 get_current_slot() {
     curslot=$(nvbootctrl get-current-slot)
     if [ $curslot -eq 1 ]; then
@@ -20,6 +20,11 @@ else
 fi
 
 BOOTSLOT=$(get_current_slot)
+ALTROOTSLOT="APP"
+if [ "$BOOTSLOT" = "a" ]; then
+    ALTROOTSLOT="${ALTROOTSLOT}_b"
+fi
+
 
 rm -f /run/swupdate/swupdate.cfg
 
@@ -31,4 +36,18 @@ sed -e"s,@SWVERSION@,$VERSION_ID," \
     -e"s,@SERIALNUMBER@,$SERIALNUMBER," \
     -e"s,@BOOTSLOT@,$BOOTSLOT," \
     $extrased \
-    /usr/share/swupdate/swupdate.cfg.in > /run/swupdate/swupdate.cfg
+    /${datadir}/swupdate/swupdate.cfg.in > /run/swupdate/swupdate.cfg
+
+rm -f /run/swupdate/sw-versions
+alt_rootfs_dev="/dev/disk/by-partlabel/$ALTROOTSLOT"
+tmp_mount=`mktemp -d`
+mount -o ro $alt_rootfs_dev $tmp_mount
+if [ -e $tmp_mount/usr/share/swupdate/sw-versions-thisslot ]; then
+    echo "Setup sw-versions based on $ALTROOTSLOT"
+    cp $tmp_mount/${datadir}/swupdate/sw-versions-thisslot /run/swupdate/sw-versions
+else
+    echo "Alternate slot $ALTROOTSLOT does not contain sw-versions, using empty file"
+    touch /run/swupdate/sw-versions
+fi
+umount $tmp_mount
+rm -rf $tmp_mount
