--- a/layers/meta-tegrademo/conf/layer.conf
+++ b/layers/meta-tegrademo/conf/layer.conf
@@ -1,4 +1,4 @@
-BBPATH =. "${LAYERDIR}:"
+BBPATH =. "${LAYERDIR}:${LAYERDIR}/dynamic-layers/meta-swupdate:"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 BBFILES_DYNAMIC += "swupdate:${LAYERDIR}/dynamic-layers/meta-swupdate/recipes-*/*/*.bb \
                     swupdate:${LAYERDIR}/dynamic-layers/meta-swupdate/recipes-*/*/*.bbappend"
