--- a/layers/meta-demo-ci/conf/layer.conf
+++ b/layers/meta-demo-ci/conf/layer.conf
@@ -8,6 +8,6 @@ BBFILE_PRIORITY_tegrademo-ci = "40"
 
 LAYERVERSION_tegrademo-ci = "1"
 LAYERDEPENDS_tegrademo-ci = "core"
-LAYERSERIES_COMPAT_tegrademo-ci = "styhead walnascar"
+LAYERSERIES_COMPAT_tegrademo-ci = "walnascar"
 
 addpylib ${LAYERDIR}/lib oeaws.botos3fetcher
