--- a/layers/meta-tegra-support/conf/layer.conf
+++ b/layers/meta-tegra-support/conf/layer.conf
@@ -7,4 +7,4 @@ BBFILE_PRIORITY_tegrasupport = "40"
 
 LAYERVERSION_tegrasupport = "4"
 LAYERDEPENDS_tegrasupport = "core tegra"
-LAYERSERIES_COMPAT_tegrasupport = "walnascar"
+LAYERSERIES_COMPAT_tegrasupport = "whinlatter"
