--- a/layers/meta-tegrademo/dynamic-layers/meta-swupdate/recipes-support/swupdate/tegra-swupdate-script/tegra-swupdate-script.lua.in
+++ b/layers/meta-tegrademo/dynamic-layers/meta-swupdate/recipes-support/swupdate/tegra-swupdate-script/tegra-swupdate-script.lua.in
@@ -1,30 +1,19 @@
-local function get_current_slot()
+local function get_current_alt_slot()
     local handle = io.popen("nvbootctrl get-current-slot")
     if not handle then
         print("Failed to get-current-slot")
-        return nil
+        return nil, nil
     end
     local result = handle:read("*a")
     handle:close()
-    return result:match("%d") -- Extracts the first digit found
+    local current_slot = result:match("%d") -- Extracts the first digit found
+    local alt_slot = current_slot == "1" and "0" or "1"
+    return current_slot, alt_slot
 end
 
 local function set_active_slot(slot)
     local command = "nvbootctrl set-active-boot-slot " .. slot
     return os.execute(command)
-end
-
-local function switch_slots()
-    local current_slot = get_current_slot()
-    local success = -1
-    if current_slot then
-        local new_slot = current_slot == "1" and "0" or "1"
-        print("Switching active slot to: " .. new_slot)
-        success = set_active_slot(new_slot)
-    else
-        print("Failed to determine the current slot.")
-    end
-    return success
 end
 
 local function file_exists(path)
@@ -38,8 +27,14 @@ local function file_exists(path)
 end
 
 function postinst()
-    local success = -1
+    local success = false
     local result = ""
+    local current_slot, alt_slot = get_current_alt_slot()
+    if not current_slot or not alt_slot then
+        result = "Couldn't determine current or alt slot"
+        return success, result
+    end
+
     if file_exists("@TEGRA_SWUPDATE_CAPSULE_INSTALL_PATH@") then
         print("Running bootloader update script")
         success = os.execute("/usr/bin/oe4t-set-uefi-OSIndications")
@@ -47,11 +42,16 @@ function postinst()
     else
         if @TEGRA_SWUPDATE_BOOTLOADER_INSTALL_ONLY_IF_DIFFERENT@ then
             print("Running os switch instead of bootloader update since @TEGRA_SWUPDATE_CAPSULE_INSTALL_PATH@ is missing")
-            success = switch_slots()
-            result = "switch_slots completed with status: " .. tostring(success)
+            success, detail = set_active_slot(alt_slot)
+            if success then
+                result = "switch_slots to " .. alt_slot .. " completed with success"
+            else
+                result = "switch_slots to " .. alt_slot .. " completed with failure: " .. tostring(detail)
+            end
         else
             result = "Missing @TEGRA_SWUPDATE_CAPSULE_INSTALL_PATH@, cannot complete update"
         end
+
     end
     return success, result
 end
