--- a/.gitmodules
+++ b/.gitmodules
@@ -9,11 +9,11 @@
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
 	url = https://github.com/OE4T/meta-tegra.git
-	branch = master
+	branch = master-l4t-r38.2.x
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
-	url = https://github.com/OE4T/meta-tegra-community
-	branch = master
+	url = https://github.com/OE4T/meta-tegra-community.git
+	branch = master-l4t-r38.2.x
 [submodule "repos/bitbake"]
 	path = repos/bitbake
 	url = https://github.com/openembedded/bitbake.git
