kas: refactor includes
In order to use with other branches, we need to make a common.yml
file which we can reference and which does not include oecore content.

We provide a poky version of the include file which can be used as an
alternative include for layers which use poky instead of openembedded-core/bitbake
combo (currently any other than master)

The tegra-demo-distro-branch.yml file now includes the appropriate .yml file
for oecore or poky depending on the requirements of the specific branch
where it is located.  When including this file, make sure the branch
of tegra-demo-distro matches the configuration of the rest of your repo.

Signed-off-by: Dan Walkes <danwalkes@trellis-logic.com>

--- a/layers/meta-tegrademo/conf/kas/include/tegra-demo-distro-branch.yml
+++ b/layers/meta-tegrademo/conf/kas/include/tegra-demo-distro-branch.yml
@@ -1,5 +1,7 @@
 header:
   version: 14
+  includes:
+    - layers/meta-tegrademo/conf/kas/include/tegra-demo-distro-oecore.yml
 
 defaults:
   repos:
