--- a/layers/meta-tegrademo/conf/kas/tegra-demo-distro.yml
+++ b/layers/meta-tegrademo/conf/kas/tegra-demo-distro.yml
@@ -1,60 +1,6 @@
 header:
   version: 14
   includes:
+    - layers/meta-tegrademo/conf/kas/include/tegra-demo-distro-common.yml
     - layers/meta-tegrademo/conf/kas/include/tegra-demo-distro-branch.yml
 
-distro: tegrademo
-
-target:
-  - demo-image-base
-
-machine: jetson-orin-nano-devkit
-
-repos:
-  tegra-demo-distro:
-    layers:
-      layers/meta-tegra-support:
-      layers/meta-tegrademo:
-      layers/meta-demo-ci:
-
-  meta-tegra:
-    path: repos/meta-tegra
-    url: https://github.com/OE4T/meta-tegra.git
-
-  meta-openembedded:
-    path: repos/meta-openembedded
-    url: https://git.openembedded.org/meta-openembedded
-    layers:
-      meta-filesystems:
-      meta-networking:
-      meta-python:
-      meta-oe:
-
-
-  meta-tegra-community:
-    path: repos/meta-tegra-community
-    url: https://github.com/OE4T/meta-tegra-community
-
-  meta-virtualization:
-    path: repos/meta-virtualization
-    url: https://git.yoctoproject.org/meta-virtualization
-
-  openembedded-core:
-    path: repos/openembedded-core
-    url: https://github.com/openembedded/openembedded-core.git
-    layers:
-      meta:
-
-  bitbake:
-    path: repos/bitbake
-    url: https://github.com/openembedded/bitbake.git
-    layers:
-      .: disabled
-
-local_conf_header:
-  tegra: |
-    # these two classes only work as intended when being inherited in the
-    # OE4t setup-env.sh style environment, as they modify bblayers.conf
-    # and expect additional information on the host.
-    INHERIT:remove = "tegra-support-sanity distro_layer_buildinfo"
-    EXTRA_IMAGE_FEATURES ?= "allow-empty-password empty-root-password allow-root-login"
