kas: fix poky removal
Bitbake does not include a layer, so we need to specifically
exclude content in a layers: section.

Fixes:
```
2025-11-14 15:42:57 - INFO     - ERROR: Unable to parse /work/repos/bitbake/lib/bb/parse/__init__.py
2025-11-14 15:42:57 - INFO     - Traceback (most recent call last):
2025-11-14 15:42:57 - INFO     - File "/work/repos/bitbake/lib/bb/parse/__init__.py", line 145, in resolve_file
2025-11-14 15:42:57 - INFO     - raise IOError(errno.ENOENT, "file %s not found" % fn)
2025-11-14 15:42:57 - INFO     - FileNotFoundError: [Errno 2] file /build/../work/repos/bitbake/conf/layer.conf not found
2025-11-14 15:42:57 - INFO     -
```

Signed-off-by: Dan Walkes <danwalkes@trellis-logic.com>

--- a/layers/meta-tegrademo/conf/kas/tegra-demo-distro.yml
+++ b/layers/meta-tegrademo/conf/kas/tegra-demo-distro.yml
@@ -48,6 +48,8 @@ repos:
   bitbake:
     path: repos/bitbake
     url: https://github.com/openembedded/bitbake.git
+    layers:
+      .: disabled
 
 local_conf_header:
   tegra: |
