--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
-	branch = master
+	branch = whinlatter
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
 	url = git://git.yoctoproject.org/meta-virtualization
@@ -13,12 +13,12 @@
 [submodule "repos/meta-tegra-community"]
 	path = repos/meta-tegra-community
 	url = https://github.com/OE4T/meta-tegra-community
-	branch = master
+	branch = whinlatter
 [submodule "repos/bitbake"]
 	path = repos/bitbake
 	url = https://github.com/openembedded/bitbake.git
-	branch = master
+	branch = 2.14
 [submodule "repos/openembedded-core"]
 	path = repos/openembedded-core
 	url = https://github.com/openembedded/openembedded-core.git
-	branch = master
+	branch = whinlatter
