--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,14 @@
 [submodule "poky"]
 	path = repos/poky
-	url = git://git.yoctoproject.org/poky
+	url = https://git.yoctoproject.org/poky
 	branch = scarthgap
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
-	url = git://git.openembedded.org/meta-openembedded
+	url = https://git.openembedded.org/meta-openembedded
 	branch = scarthgap
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
-	url = git://git.yoctoproject.org/meta-virtualization
+	url = https://git.yoctoproject.org/meta-virtualization
 	branch = scarthgap
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
