--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "repos/meta-openembedded"]
 	path = repos/meta-openembedded
-	url = git://git.openembedded.org/meta-openembedded
+	url = https://git.openembedded.org/meta-openembedded
 	branch = master
 [submodule "repos/meta-virtualization"]
 	path = repos/meta-virtualization
-	url = git://git.yoctoproject.org/meta-virtualization
+	url = https://git.yoctoproject.org/meta-virtualization
 	branch = master
 [submodule "repos/meta-tegra"]
 	path = repos/meta-tegra
